# cimgen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CIMgen.py  CMakeLists.txt  CimGenOverview.md  Dockerfile  Dockerfile.c++  Dockerfile.cpp  Dockerfile.python  MANIFEST.in  Makefile  README.md  build.py  cimCodebaseGenerator.py  cim_generate.go  cim_generate_test.go  cim_schema_import.go  cim_schema_import_test.go  cim_schema_processing.go  cim_schema_test.go  cim_write_lang_files_test.go  cimgen.go  cimpy_class_template.mustache  cimpy_class_template.tmpl  cpp_float_header_template.mustache  cpp_float_object_template.mustache  cpp_header_template.mustache  cpp_object_template.mustache  decoder.go  decoder_cim_data_test.go  decoder_test.go  generator_cpp.go  generator_go.go  generator_js.go  generator_python.go  go.mod  go.sum  profile_decode_encode_cim_data_test.go  profile_decoder.go  (+4 more)
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: build.yaml  go.yaml  pre-commit.yaml
c++/langPack/: __init__.py  langPackCpp.py
c++/templates/: cpp_enum_header_template.mustache  cpp_float_header_template.mustache  cpp_object_template.mustache
cached_files/: BaseClass.cpp  BaseClass.h  BaseClass.hpp  BaseClassDefiner.cpp  BaseClassDefiner.hpp  Boolean.cpp  Boolean.hpp  CIMFactory.cpp  CIMFactory.hpp  CMakeLists.txt  ConformLoadSchedule.hpp  Date.cpp  Date.hpp  Float.cpp  Float.hpp  Integer.cpp  Integer.hpp  NonConformLoadSchedule.hpp  String.hpp  Task.cpp  Task.hpp  assignments.cpp
cached_files/IEC61970/: IEC61970CIMVersion.cpp  IEC61970CIMVersion.h
cgmes_schema/CGMES_2.4.13_18DEC2013/: DiagramLayoutProfileRDFSAugmented-v2_4_13Rev1-18Dec2013.rdf  (+8 more)
cimgen/: build.py  cimgen.py
cimgen-go/: cim_generate.go  cim_generate_test.go  cim_schema_import.go  cim_schema_import_test.go  decoder.go  decoder_test.go  generator_cpp.go  generator_go.go  generator_java.go  generator_javascript.go  generator_proto.go  go.mod  templates.go
cimgen_v2_4_15_flat/: ACDCConverter.py  ACDCConverterDCTerminal.py  ACDCTerminal.py  ACLineSegment.py  ActivePower.py  ActivePowerPerCurrentFlow.py  ActivePowerPerFrequency.py  AngleDegrees.py  AngleRadians.py  ApparentPower.py  Area.py  AsynchronousMachine.py  AsynchronousMachineDynamics.py  AsynchronousMachineEquivalentCircuit.py  AsynchronousMachineKind.py  AsynchronousMachineTimeConstantReactance.py  AsynchronousMachineUserDefined.py  BaseVoltage.py  BasicIntervalSchedule.py  Boolean.py  Breaker.py  BusNameMarker.py  BusbarSection.py  Capacitance.py  CapacitancePerLength.py  Conductance.py  ConductingEquipment.py  Conductor.py  ConformLoad.py  ConformLoadGroup.py  ConnectivityNode.py  ConnectivityNodeContainer.py  Connector.py  ControlArea.py  ControlAreaGeneratingUnit.py  ControlAreaTypeKind.py  CoordinateSystem.py  CsConverter.py  CsOperatingModeKind.py  CsPpccControlKind.py  (+397 more)
cimgo/: go.mod  profile_decode_cim_data_test.go  profile_decode_encode_cim_data_test.go  profile_decoder.go  profile_encoder.go
cimgostructs/: cim_dataset.go  cim_struct_lists.go  cim_typeinfo.go  struct_list.go
cimgoxml/: cimgomarshal.go  cimgoxml.go  cimgoxmlread.go
cpp/: __init__.py  build.py  langPack.py  langPackCpp.py
documentation/: CIMgenOverview.md  past-commits.txt
java/: BaseClass.java  BaseClassBuilder.java  BaseClassInterface.java  Boolean.java  Date.java  Float.java  Integer.java  PrimitiveBuilder.java  String.java  __init__.py  langPack.py
javascript/: __init__.py  langPack.py
json_ld/: __init__.py  langPack.py
lang-templates/: cpp_classlist.tmpl  cpp_enum_header.tmpl  cpp_enum_object.tmpl  cpp_float_header.tmpl  cpp_header.tmpl  cpp_object.tmpl  cpp_profile_header.tmpl  cpp_profile_object.tmpl  cpp_string_header.tmpl  go_cim_dataset_template.tmpl  go_enum.tmpl  go_enum_template.tmpl  go_struct.tmpl  go_struct_list_template.tmpl  go_struct_lists.tmpl  go_struct_template.tmpl  go_type_alias.tmpl  go_type_alias_template.tmpl  java_class.tmpl  java_constants.tmpl  java_enum.tmpl  java_profile.tmpl  js_constants.tmpl  js_enum.tmpl  js_profile.tmpl  python_class.tmpl  python_class_template.tmpl  python_constants.tmpl  python_datatype.tmpl  python_enum.tmpl  python_primitive.tmpl  python_profile.tmpl  python_profiles.tmpl  python_simple_class.tmpl  python_simple_profiles.tmpl
langPack/: __init__.py  langPackCpp.py  langPackPython.py
modernpython/: Base.py  Readme.md  __init__.py  cimdatatype_header.py  enum_header.py  langPack.py  primitive_header.py  schema_header.py
python/: __init__.py  build.py  langPack.py
test/: CMakeLists.txt  MockCIMFactory.cpp  MockCIMFactory.hpp  test_001.xml  test_002.xml
(+174 files in other folders)
