cmake_minimum_required(VERSION 3.10)


if(NOT USE_CIM_VERSION)
	set(USE_CIM_VERSION "CGMES_2.4.15_27JAN2020")
endif()
if(NOT CGMES_OUTPUT_FOLDER)
	set(CGMES_OUTPUT_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/${USE_CIM_VERSION}" CACHE STRING "Define CGMES c++ file output folder")
endif()
if(NOT CIM_OUTPUT_LANG)
	set(CIM_OUTPUT_LANG "cpp")
endif()
if(USE_CIM_VERSION STREQUAL "CGMES_2.4.13_18DEC2013")
    message(STATUS "Using CIM Version: ${USE_CIM_VERSION}")
elseif(USE_CIM_VERSION STREQUAL "CGMES_2.4.15_16FEB2016")
    message(STATUS "Using CIM Version: ${USE_CIM_VERSION}")
elseif(USE_CIM_VERSION STREQUAL "CGMES_2.4.15_27JAN2020")
    message(STATUS "Using CIM Version: ${USE_CIM_VERSION}")
else()
    message(FATAL_ERROR "${USE_CIM_VERSION} is an invalid value for USE_CIM_VERSION")
endif()
message(STATUS "Using output folder: ${CGMES_OUTPUT_FOLDER}")
set(SCHEMA_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/cgmes_schema/${USE_CIM_VERSION}")
find_package (Python COMPONENTS Interpreter)
execute_process(WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/build.py ${CGMES_OUTPUT_FOLDER} ${SCHEMA_FOLDER} ${CIM_OUTPUT_LANG})
unset(SCHEMA_FOLDER)

